--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,3 @@
-# NOTE: This is an example CircleCI configuration that
-# will build your book and preview its HTML content.
-# You will probably have to modify it in order to get it working
-# just the way you want. See 
-https://jupyter.org/jupyter-book/advanced/circleci.html
-# for more information
 version: 2.1
 jobs:
   build_page_html:
@@ -31,8 +25,7 @@ jobs:
           name: Build the website
           command: bundle exec jekyll build --baseurl /0/html/
 
-      # Tell Circle to store the documentation output in a folder that we can 
-access later
+      # Tell Circle to store the documentation output in a folder that we can access later
       - store_artifacts:
           path: _site/
           destination: html
@@ -110,9 +103,7 @@ commands:
             echo "export PATH=$MINICONDA/bin:$PATH" >> $BASH_ENV
             source $BASH_ENV
             hash -r
-            wget 
-https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O 
-miniconda.sh
+            wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
             bash miniconda.sh -b -f -p $MINICONDA
             conda config --set always_yes yes
             conda update conda
