added upgrade bundle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,11 @@ commands:
           name: Installing Ruby/Jekyll from conda-forge
           command: conda install -c conda-forge rb-github-pages
 
+      # upgrade bundle
+      - run:
+          name: Upgrade bundle
+          command: bundle update --bundler
+
       # Build the book's HTML w/ the base_url for CircleCI artifacts
       - run:
           name: Install book Ruby dependencies
