--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -43,14 +43,8 @@
 - header: Demo textbook
 
 # A chapter w/ a collection of sections beneath it
-- title: Features and customization
-  url: /features/features
+- title: Themes and group topics
+  url: /topics/topics
   not_numbered: true
   expand_sections: true
-  sections:
-  - title: Markdown files
-    url: /features/markdown
-    not_numbered: true
-  - title: Jupyter notebooks
-    url: /features/notebooks
-    not_numbered: true
+
