--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ use_binder_button: false                 # If 'true', add a binder button for in
 binderhub_url: https://mybinder.org                        # The URL for your BinderHub. If no URL, use ""
 binder_repo_base: https://github.com/                     # The site on which the textbook repository is hosted
 binder_repo_org: NordicESMHub                     # The username or organization that owns this repository
-binder_repo_name: NEGI-Andoya-2019                        # The name of the repository on the web
+binder_repo_name: NEGI-Abisko-2019                        # The name of the repository on the web
 binder_repo_branch: gh-pages                   # The branch on which your textbook is hosted.
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
