added binder button

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ jupyterhub_url: http://abisko.uiogeo-apps.sigma2.no # The URL for your JupyterHu
 jupyterhub_interact_text: JupyterHub           # The text that interact buttons will contain.
 
 # Binder link settings
-use_binder_button: false                 # If 'true', add a binder button for interactive links
+use_binder_button: true                 # If 'true', add a binder button for interactive links
 binderhub_url: https://mybinder.org                        # The URL for your BinderHub. If no URL, use ""
 binder_repo_base: https://github.com/                     # The site on which the textbook repository is hosted
 binder_repo_org: NordicESMHub                     # The username or organization that owns this repository
@@ -69,7 +69,7 @@ binder_repo_branch: gh-pages                   # The branch on which your textbo
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
 # Thebelab settings
-use_thebelab_button: false                # If 'true', display a button to allow in-page running code cells with Thebelab
+use_thebelab_button: true                # If 'true', display a button to allow in-page running code cells with Thebelab
 thebelab_button_text: Thebelab                 # The text to display inside the Thebelab initialization button
 codemirror_theme: abcdef                     # Theme for codemirror cells, for options see https://codemirror.net/doc/manual.html#config
 
