--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -46,15 +46,23 @@
 
 # Setup
 
-- title: Setup
-  url: /setup/setup
-  not_numbered: true
-  expand_sections: true
-
 - title: Course preparation
-  url: /setup/Abisko_prep
+  url: /setup/preparation
   not_numbered: true
   expand_sections: true
+  sections:
+  - title: Setup
+    url: /setup/setup
+    subsections:
+    - title: Laptop setup
+      url: /setup/laptop_setup
+    - title: Jupyterhub setup
+      url: /setup/jupyterhub_setup
+  - title: Notebook example
+    url: /setup/Abisko_prep
+
+# Divider for meta-pages and content page
+- divider: true
 
 # External link
 - title: GitHub repository
