fix upper case filename

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -68,7 +68,7 @@
 # During the course 
 
 - title: Course Contribution
-  url: /contributing
+  url: /CONTRIBUTING
   not_numbered: true
 
 # Divider for meta-pages and content page
