--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -62,14 +62,15 @@
     url: https://swcarpentry.github.io/python-novice-gapminder/index
     external: true
     not_numbered: true
-  - title: Notebook example
-    url: /setup/Abisko_prep
 
 # During the course 
 
 - title: Course Contribution
   url: /CONTRIBUTING
   not_numbered: true
+  sections:
+  - title: Notebook example
+    url: /setup/Abisko_prep
 
 # Divider for meta-pages and content page
 - divider: true
