remove numbering for learning section

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -75,6 +75,7 @@
 # Learning resources
 - title: Learning resources
   url: /training/intro
+  not_numbered: true
   sections:
   - title: Programming
     url: https://nordicesmhub.github.io/tutorials/programming/index
