added notebook example to plot CMIP6

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -92,6 +92,9 @@
   - title: CMIP6 data
     url: /training/CMIP6_data
     not_numbered: true
+    subsections:
+    - title: Plotting CMIP6 data
+      url: /training/CMIP6_example
 
 # Divider for meta-pages and content page
 - divider: true
