--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -89,6 +89,9 @@
     url: https://nordicesmhub.github.io/tutorials/science/index
     external: true
     not_numbered: true
+  - title: Getting started with Git/Github
+    url: /training/intro_github
+    not_numbered: true
   - title: CMIP6 data
     url: /training/CMIP6_data
     not_numbered: true
