--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -92,9 +92,13 @@
   - title: Getting started with Git/Github
     url: /training/intro_github
     not_numbered: true
-  - title: pyaerocom
-    url: /training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom
-    not_numbered: true
+  - title: Pyaerocom
+    url: https://nordicesmhub.github.io/NEGI-Abisko-2019/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.slides.html
+    external: true
+    subsections:
+    - title: pyaerocom jupyter notebook
+      url: /training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom
+      not_numbered: true
   - title: CMIP6 data
     url: /training/CMIP6_data
     not_numbered: true
