--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -93,7 +93,7 @@
     url: /training/intro_github
     not_numbered: true
   - title: Pyaerocom
-    url: https://nordicesmhub.github.io/NEGI-Abisko-2019/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.slides.html
+    url: https://nordicesmhub.github.io/NEGI-Abisko-2019/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.slides
     external: true
     subsections:
     - title: pyaerocom jupyter notebook
