info on dev pyaerocom

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -100,6 +100,8 @@
     - title: pyaerocom jupyter notebook
       url: /training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom
       not_numbered: true
+    - title: Install pyaerocom dev
+      url: /training/pyaerocom/local_pyaerocom
   - title: CMIP6 data
     url: /training/CMIP6_data
     not_numbered: true
