--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -93,6 +93,9 @@
   - title: Getting started with Git/Github
     url: /training/intro_github
     not_numbered: true
+  - title: Visualize in Python
+    url: /training/visualize/intro
+    not_numbered: true
   - title: Pyaerocom
     url: https://nordicesmhub.github.io/NEGI-Abisko-2019/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.slides.html#/index
     external: true
