--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -34,6 +34,15 @@
   url: /topics/topics
   not_numbered: true
   expand_sections: true
+  sections:
+  - title: Group-1
+    url: /topics/group-1/intro
+  - title: Group-2
+    url: /topics/group-2/intro
+  - title: Group-3
+    url: /topics/group-3/intro
+  - title: Group-4
+    url: /topics/group-4/intro
 
 # A chapter w/ a collection of sections beneath it
 - title: Tools
