--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -70,9 +70,13 @@
 # During the course 
 
 - title: Course Contribution
-  url: /CONTRIBUTING
+  url: /contribution/os_contribution
   not_numbered: true
   sections:
+  - title: New contributors
+    url: /contribution/newcomers
+  - title: Contribute to Open Science projects
+    url: /contribution/CONTRIBUTING
   - title: Notebook example
     url: /setup/Abisko_prep
 
