--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -109,6 +109,10 @@
   - title: Visualize in Python
     url: /training/visualize/intro
     not_numbered: true
+    subsections:
+    - title: Aerosol distribution plotting
+      url: /training/visualize/zeppelin_size_dist
+      not_numbered: true
   - title: Pyaerocom
     url: https://nordicesmhub.github.io/NEGI-Abisko-2019/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.slides.html#/index
     external: true
