--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -114,8 +114,8 @@
       url: /training/visualize/zeppelin_size_dist
       not_numbered: true
   - title: Pyaerocom
-    url: https://nordicesmhub.github.io/NEGI-Abisko-2019/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.slides.html#/index
-    external: true
+    url: /training/pyaerocom/intro
+    not_numbered: true
     subsections:
     - title: pyaerocom jupyter notebook
       url: /training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom
