--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -95,6 +95,9 @@
   not_numbered: true
   expand_sections: true
   sections:
+  - title: Presentations
+    url: /training/presentations
+    not_numbered: true
   - title: Programming
     url: https://nordicesmhub.github.io/tutorials/programming/index
     external: true
