--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -178,7 +178,7 @@
     - title: How to find EBAS files
       url: /training/pyaerocom/HOWTO_find_EBAS_files
     - title: How to read EBAS files
-      url: /training/pyaerocom/HOWTO_read_EBAS_files.ipynb
+      url: /training/pyaerocom/HOWTO_read_EBAS_files
     - title: Install pyaerocom dev
       url: /training/pyaerocom/local_pyaerocom
   - title: CMIP6 data
