--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -27,60 +27,67 @@
   not_numbered: true
 
 # Add a header and sample content section
-- header: Course program
+- header: Themes and group topics
 
 # A chapter w/ a collection of sections beneath it
-- title: Themes and group topics
-  url: /topics/topics
+- title: Group-1
+  url: /topics/group-1/intro
   not_numbered: false
   expand_sections: false
   sections:
-  - title: Group-1
-    url: /topics/group-1/intro
+  - title: libe05 project
+    url: /topics/group-1/libe05_test
+  - title: Luis-s21 project
+    url: /topics/group-1/Luis-s21_Project
+  - title: Slijeci project
+    url: /topics/group-1/slijeci_project
+  - title: Tuulivarenka project
+    url: /topics/group-1/tuulivarenka_zeppelin2010_2015_particleplot
+
+- title: Group-2
+  url: /topics/group-2/intro
+  not_numbered: false
+  expand_sections: false
+  sections:
+  - title: AOD div
+    url: /topics/group-2/aod_div
+  - title: lassekva Project
+    url: /topics/group-2/lassekva
+  - title: franzihe area averaged AOD Svalbard
+    url: /topics/group-2/franzihe_area_averaged_AOD_Svalbard
+  - title: Marekrataj read data
+    url: /topics/group-2/marekrataj_read_data
+  - title: Sofiemt DMP
+    url: /topics/group-2/sofiemt_dmp
+
+- title: Group-3
+  url: /topics/group-3/intro
+  not_numbered: false
+  expand_sections: false
+  sections:
+  - title: Data to use
+    url: /topics/group-3/data-to-use
+  - title: Maria's project
+    url: /topics/group-3/DeleteMaria
+  - title: Stinsage temperature
+    url: /topics/group-3/stinsage_temperature
+  - title: AOD johan
+    url: /topics/group-3/aod_johan
+
+- title: Group-4
+  not_numbered: false
+  expand_sections: false
+  url: /topics/group-4/intro
+  sections:
+  - title: Dinastabell DMP
+    url: /topics/group-4/dinastabell_DMP
+  - title: Olga firus test
+    url: /topics/group-4/olga_firus_test
+  - title: Dominichr1 Test
+    url: /topics/group-4/dominichr1_test
+  - title: Sigridjb topic presentation
+    url: /topics/group-4/sigridjb_topic_presentation
     subsections:
-    - title: libe05 project
-      url: /topics/group-1/libe05_test
-    - title: Luis-s21 project
-      url: /topics/group-1/Luis-s21_Project
-    - title: Slijeci project
-      url: /topics/group-1/slijeci_project
-    - title: Tuulivarenka project
-      url: /topics/group-1/tuulivarenka_zeppelin2010_2015_particleplot
-  - title: Group-2
-    url: /topics/group-2/intro
-    subsections:
-    - title: AOD div
-      url: /topics/group-2/aod_div
-    - title: lassekva Project
-      url: /topics/group-2/lassekva
-    - title: franzihe area averaged AOD Svalbard
-      url: /topics/group-2/franzihe_area_averaged_AOD_Svalbard
-    - title: Marekrataj read data
-      url: /topics/group-2/marekrataj_read_data
-    - title: Sofiemt DMP
-      url: /topics/group-2/sofiemt_dmp
-  - title: Group-3
-    url: /topics/group-3/intro
-    subsections:
-    - title: Data to use
-      url: /topics/group-3/data-to-use
-    - title: Maria's project
-      url: /topics/group-3/DeleteMaria
-    - title: Stinsage temperature
-      url: /topics/group-3/stinsage_temperature
-    - title: AOD johan
-      url: /topics/group-3/aod_johan
-  - title: Group-4
-    url: /topics/group-4/intro
-    subsections:
-    - title: Dinastabell DMP
-      url: /topics/group-4/dinastabell_DMP
-    - title: Olga firus test
-      url: /topics/group-4/olga_firus_test
-    - title: Dominichr1 Test
-      url: /topics/group-4/dominichr1_test
-    - title: Sigridjb topic presentation
-      url: /topics/group-4/sigridjb_topic_presentation
     - title: Alert Size distribution
       url: /topics/group-4/SizeDistNotebooks/Alert_sizedist
     - title: Tiksi Size distribution
@@ -89,6 +96,12 @@
       url: /topics/group-4/SizeDistNotebooks/Nord_sizedist
     - title: Zeppelin Size distribution
       url: /topics/group-4/SizeDistNotebooks/Zeppelin_sizedist
+  - title: NILU size distribution from EBAS
+    url: /topics/group-4/NILU_size_distr_from_ebas
+  - title: References
+    url: /topics/group-4/references.md
+
+- header: Course program
 
 # A chapter w/ a collection of sections beneath it
 - title: Tools
