remove extension for ref

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -99,7 +99,7 @@
   - title: NILU size distribution from EBAS
     url: /topics/group-4/NILU_size_distr_from_ebas
   - title: References
-    url: /topics/group-4/references.md
+    url: /topics/group-4/references
 
 - header: Course program
 
