--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -147,6 +147,15 @@
     url: /contributing/CONTRIBUTING
   - title: Notebook example
     url: /setup/Abisko_prep
+  
+- header: Example notebook report
+  not_numbered: true
+  expand_sections: false
+  subsections:
+  - title: Linn Karlsson, keywords: Sizedistributions in NorESM
+    url: /training/example_notebooks/NeGIcourse_2018_LinnKarlsson
+    not_numbered: true
+
 
 # Learning resources
 - title: Learning resources
