--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -152,6 +152,7 @@
   url: /training/example_notebooks/example_notebooks
   not_numbered: true
   expand_sections: false
+  sections:
   - title: Linn Karlsson, keywords: Sizedistributions in NorESM
     url: /training/example_notebooks/NeGIcourse_2018_LinnKarlsson
     not_numbered: true
