--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -153,7 +153,7 @@
   not_numbered: true
   expand_sections: false
   sections:
-  - title: Linn Karlsson, keywords: Sizedistributions in NorESM
+  - title: Linn Karlsson, Sizedistributions in NorESM
     url: /training/example_notebooks/NeGIcourse_2018_LinnKarlsson
     not_numbered: true
 
