added slide intro

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -62,6 +62,8 @@
     url: /topics/group-2/marekrataj_read_data
   - title: Sofiemt DMP
     url: /topics/group-2/sofiemt_dmp
+  - title: Presentations
+    url: /topics/group-2/presentations/intro
 
 - title: Group-3
   url: /topics/group-3/intro
