--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -55,10 +55,15 @@
     url: /topics/group-2/lassekva
   - title: franzihe area averaged AOD Svalbard
     url: /topics/group-2/franzihe_area_averaged_AOD_Svalbard
+    subsections:
+    - title: Franzihe presentation
+      url: /topics/group-2/franzihe_intermediate_pres
   - title: Marekrataj read data
     url: /topics/group-2/marekrataj_read_data
   - title: Sofiemt DMP
     url: /topics/group-2/sofiemt_dmp
+  - title: Presentations
+    url: /topics/group-2/presentations/intro
 
 - title: Group-3
   url: /topics/group-3/intro
