Update toc.yml (#78)
* Update toc.yml

* Create example_notebooks

* Rename example_notebooks to example_notebooks.md

* Update toc.yml

* Update toc.yml

* Update toc.yml

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -152,6 +152,16 @@
     url: /contributing/CONTRIBUTING
   - title: Notebook example
     url: /setup/Abisko_prep
+  
+- title: Example notebook report
+  url: /training/example_notebooks/example_notebooks
+  not_numbered: true
+  expand_sections: false
+  sections:
+  - title: Linn Karlsson, Sizedistributions in NorESM
+    url: /training/example_notebooks/NeGIcourse_2018_LinnKarlsson
+    not_numbered: true
+
 
 # Learning resources
 - title: Learning resources
