--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -210,6 +210,9 @@
     - title: Gridded model data dask rolling mean
       url: /training/gridded_model_data_dask_rolling_mean
       not_numbered: true
+    - title: Dask kernel example
+      url: /training/dask_kernel/dask_kernel
+      not_numbered: true
   - title: Pyaerocom
     url: /training/pyaerocom/intro
     not_numbered: true
