--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - image: circleci/python:3.7-stretch
     steps:
       - checkout
+      - run: sudo apt-get update
+      - run: sudo apt-get install libffi-dev
       - run: pip install --user -r requirements.txt
       - run:
           name: Build site intermediate files
