--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,4 +120,7 @@ commands:
       # Build the book's HTML w/ the base_url for CircleCI artifacts
       - run:
           name: Install book Ruby dependencies
-          command: bundle install
+          command: |
+            bundle update --bundler
+	    gem install bundler:2.0.2
+	    bundle install
